couple things done

--- a/public/style.css
+++ b/public/style.css
@@ -1,629 +1,21 @@
-/*  this is where Arthur css start */
-.productsPage {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
-  background: linear-gradient(
-      rgba(255, 255, 255, 0.5),
-      rgba(255, 255, 255, 0.5)
-    ),
-    url("https://assets-global.website-files.com/600fe6e1ff56087409a9f096/605b5a558848493df14d2d13_ecommerce-product-photography.jpg")
-      no-repeat center fixed;
-  background-size: cover;
 
+
+.chart{
+  height: 400px;
+  width: 600px;
+  border: 2px solid black;
 }
 
-.productCard {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.allPlayers{
+  /* display: flex;
+  flex-direction: column; */
 }
 
-.productCardBottom{
-  color: #000;
-}
-.productCard:hover {
-  border-radius: 27px;
-  border: 1px solid #000;
-  box-shadow: inset 47px 47px 94px #bebebe, inset -47px -47px 94px #ffffff;
-  padding: 5px;
-}
-.productCard:active {
-  transform: scale(0.98);
+.playerTable{
+  width: 75%;
+  border: 2px solid black;
 }
 
-div.product{
-  word-wrap: break-word;
-}
-
-.cardName .cardPrice{
-  font-family: Impact, "Arial Narrow Bold", sans-serif;
-  font-size: 0.9em;
-  left: 0.625em;
-  bottom: 0.625em;
-  color: #000;
-}
-
-
-
-/*  this is where kevin css starts  */
-
-body {
-  font-family: sans-serif;
-}
-
-a {
-  text-decoration: none;
-}
-
-label {
-  display: block;
-}
-
-nav a {
-  display: inline-block;
-  margin: 1em;
-  /*  this is where we can change the coloring of the login and sign-up  */
-  color: #fff;
-  padding:10px 20px;
-  margin: 0 10px;
-}
-
-form div {
-  margin: 1em;
-  display: inline-block;
-}
-
-/* Navigation Bar */
-
-.top-left {
-  flex: 3;
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  background-color: #407076;
-  padding: 10px;
-  font-family: Arial;
-}
-
-.top-center {
-  flex: 3;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-}
-
-.top-item {
-  margin: 0 1em;
-  text-decoration: none;
-  /* where we can adjust the colors for the center nav */
-  color: #fff;
-  padding:10px 20px;
-  margin: 0 10px;
-}
-
-.top-right {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: end;
-  background-color: #407076;
-}
-
-.signup{
-  border: 1px solid yellow;
-  padding:10px 20px;
-  margin: 0 10px;
-}
-
-/* hover effect for both the login and center nav bar section */
-nav a:hover {
-  background-color: #555;
-}
-
-.top-item:hover {
-  background-color: #555;
-}
-
-.userInfo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-/* Login Page */
-/* container will be a hold login*/
-
-.login {
-  height: calc(100vh - 60px);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background: linear-gradient(
-      rgba(255, 255, 255, 0.5),
-      rgba(255, 255, 255, 0.5)
-    ),
-    url("https://andrewminalto.com/wp-content/uploads/2021/01/aceb5-garlic-press.jpg");
-  background-size: cover;
-}
-
-.loginTitle {
-  font-size: 50px;
-}
-
-.loginForm {
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column;
-}
-
-.loginForm > label {
-  margin: 10 px 0;
-}
-
-.loginInput {
-  padding: 10px;
-  background-color: white;
-  border: none;
-}
-
-.loginButton {
-  margin-top: 20px;
-  cursor: pointer;
-  background-color: burlywood;
-  border: none;
-  color: white;
-  border-radius: 10px;
-  padding: 10px;
-}
-
-/* hover color change with border for login button  */
-.loginButton:hover {
-  background-color: #ce8147;
-  border: 1px solid #000;
-}
-
-.loginRegisterButton {
-  position: absolute;
-  top: 60px;
-  right: 20px;
-  background-color: teal;
-  cursor: pointer;
-  border: none;
-  padding: 10px;
-  color: white;
-  border-radius: 10px;
-}
-
-/* Register Styling*/
-.register {
-  height: calc(100vh - 60px);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background: linear-gradient(
-      rgba(255, 255, 255, 0.5),
-      rgba(255, 255, 255, 0.5)
-    ),
-    url("https://img.freepik.com/premium-vector/hand-painted-background-violet-orange-colours_23-2148427578.jpg?w=2000");
-  background-size: cover;
-}
-
-.registerTitle {
-  font-size: 50px;
-}
-
-.registerForm {
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column;
-}
-
-.registerForm > label {
-  margin: 10 px 0;
-}
-
-.registerInput {
-  padding: 10px;
-  background-color: white;
-  border: none;
-}
-
-.registerButton {
-  margin-top: 20px;
-  cursor: pointer;
-  background-color: teal;
-  border: none;
-  color: white;
-  border-radius: 10px;
-  padding: 10px;
-}
-
-.registerButton:hover {
-  border: 1px solid black;
-  background-color: #002529;
-}
-
-.registerLoginButton {
-  position: absolute;
-  top: 60px;
-  right: 20px;
-  background-color: burlywood;
-  cursor: pointer;
-  border: none;
-  padding: 10px;
-  color: white;
-  border-radius: 10px;
-}
-
-/* Cart Styling */
-
-#cart-header {
+td{
   text-align: center;
-  margin-top: 100px;
-  margin-bottom: 50px;
-}
-
-#cart-columns {
-  display: flex;
-  justify-content: space-around;
-  text-align: center;
-  width: 80%;
-  border-bottom: dotted gray;
-  align-items: center;
-  margin-left: 10%;
-  font-style: italic;
-}
-
-.cart-item-container {
-  display: flex;
-  justify-content: space-around;
-  text-align: center;
-  width: 80%;
-  border-bottom: solid;
-  align-items: center;
-  margin-left: 10%;
-}
-.cart-item-img,
-.cart-column-photo {
-  width: 15%;
-}
-.cart-item-name,
-.cart-column-name {
-  width: 30%;
-}
-
-.cart-item-price,
-.cart-column-price {
-  width: 15%;
-}
-
-.cart-item-quantity-container,
-.cart-column-quantity {
-  width: 15;
-}
-
-.cart-item-total,
-.cart-column-total {
-  width: 15%;
-}
-
-.cart-quantity-container {
-  width: 10%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
-.checkout-button {
-  margin-top: 20px;
-  position: relative;
-  left: 80%;
-  border: 0;
-  line-height: 2.5;
-  padding: 0 20px;
-  font-size: 1rem;
-  text-align: center;
-  color: #fff;
-  text-shadow: 1px 1px 1px #000;
-  border-radius: 10px;
-  background-color: rgba(220, 0, 0, 1);
-  background-image: linear-gradient(
-    to top left,
-    rgba(0, 0, 0, 0.2),
-    rgba(0, 0, 0, 0.2) 30%,
-    rgba(0, 0, 0, 0)
-  );
-  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6),
-    inset -2px -2px 3px rgba(0, 0, 0, 0.6);
-}
-
-.checkout-button:hover {
-  background-color: rgba(255, 0, 0, 1);
-}
-
-.checkout-button:active {
-  box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6),
-    inset 2px 2px 3px rgba(0, 0, 0, 0.6);
-}
-.empty-cart {
-  margin-top: 10%;
-  text-align: center;
-}
-
-/* Styling for the Checkout Page Starts Here */
-
-.checkoutOuter {
-  display: flex;
-  justify-content: center;
-}
-
-.checkoutTitle{
-  text-decoration: underline;
-}
-
-.checkoutLeftSection {
-  height: 100%;
-  width: 50%;
-}
-
-.leftSectionTop {
-  border-bottom: 1px solid black;
-  padding: 10px;
-}
-
-.checkoutInput{
-  margin: 2px;
-}
-
-.leftSectionCenter {
-  border-bottom: 1px solid black;
-  padding: 10px;
-}
-.checkoutForm{
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-}
-
-.creditCardForm {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-column-gap: 5px;
-  grid-row-gap: 5px;
-}
-
-.billingInput{
-  margin: 2px;
-}
-
-.checkoutRightSection {
-  height: 100vh;
-  width: 50%;
-  padding: 10px;
-}
-
-.productBox {
-  border-bottom: 1px solid black;
-  height: 200px;
-  width: 100%;
-  display: grid;
-  grid-template-columns: 60% 1fr;
-  grid-template-rows: 80% 1fr;
-  grid-column-gap: 5px;
-  grid-row-gap: 5px;
-  margin: 10px;
-}
-
-.checkoutImg {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-.checkoutQuantity {
-  justify-self: center;
-}
-
-.shippingInfo:hover{
-  cursor:pointer;
-  text-decoration: underline;
-}
-
-.creditCardInfo:hover{
-  cursor:pointer;
-  text-decoration: underline;
-}
-
-.arrow {
-  border: solid black;
-  border-width: 0 3px 3px 0;
-  display: inline-block;
-  padding: 3px;
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-}
-
-/* Responsive screen section */
-/* home page section */
-.welcome{
-  display:flex;
-  position: relative;
-  height: 50vh;
-  width: 100vw;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  background-color: #407076;
-  background: linear-gradient(
-    rgba(255, 255, 255, 0.5),
-    rgba(255, 255, 255, 0.5)
-  ),
-  url("https://kinsta.com/wp-content/uploads/2022/06/open-source-ecommerce.jpg");
-
-}
-
-.message{
-  position: absolute;
-  width: 400px;
-  height: 100px;
-  font-size: 40px;
-  right: 20px;
-  bottom: 60px;
-  font-weight: 400;
-  font-style: oblique;
-}
-
-.confirmation{
-  display:flex;
-  position: relative;
-  height: 50vh;
-  width: 100vw;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  background-color: #407076;
-  background: linear-gradient(
-    rgba(255, 255, 255, 0.5),
-    rgba(255, 255, 255, 0.5)
-  ),
-  url("https://kinsta.com/wp-content/uploads/2022/06/open-source-ecommerce.jpg");
-  font-weight: 400;
-  font-style: oblique;
-  font-size: 40px;
-}
-
-
-
-
-
-/* single product styling */
-
-.single-product {
-  display: flex;
-  justify-content: center;
-  margin-top: 100px;
-}
-
-.single-product-container {
-  display: flex;
-  width: 65%;
-  text-align: center;
-}
-
-
-.single-product-container-left {
-  width: 65%;
-
-}
-
-
-.single-product-container-right {
-  display: flex;
-  width: 35%;
-  text-align: left;
-  align-items: flex-start;
-  justify-content: center;
-  flex-direction: column;
-}
-
-
-.single-product-name {
-  font-weight: bold;
-  font-size: 2rem;
-}
-
-.single-product-price {
-  font-weight: bold;
-  font-size: 1.5rem;
-  color: red
-}
-
-.single-product-description {
-  font-style: italic;
-  margin-top: 35px;
-  font-size: 1rem;
-}
-
-
-.add-to-cart {
-  margin-top: 20px;
-  border: 0;
-  line-height: 2.5;
-  padding: 0 20px;
-  font-size: 1rem;
-  text-align: center;
-  color: rgb(0, 0, 0);
-  text-shadow: 1px 1px 1px rgb(70, 70, 70);
-  border-radius: 10px;
-  background-color: yellow;
-  background-image: linear-gradient(
-    to top left,
-    rgba(0, 0, 0, 0.2),
-    rgba(0, 0, 0, 0.2) 30%,
-    rgba(0, 0, 0, 0)
-  );
-  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6),
-    inset -2px -2px 3px rgba(0, 0, 0, 0.6);
-}
-
-.add-to-cart:hover {
-  background-color:green;
-}
-
-.add-to-cart:active {
-  box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6),
-    inset 2px 2px 3px rgba(0, 0, 0, 0.6);
-}
-
-#edit-user{
-  display: flex;
-  gap: 1rem;
-  flex-direction: column;
-  width: 60%;
-}
-
-.other-box{
-  display: flex;
-  flex-direction: column;
-  gap: 1rem ;
-  margin-left: 60%;
-}
-
-.edit-submit{
-  margin-top: 20px;
-  position: relative;
-  left: 0%;
-  border: 0;
-  line-height: 2.5;
-  padding: 0 20px;
-  font-size: 1rem;
-  text-align: center;
-  color: #fff;
-  text-shadow: 1px 1px 1px #000;
-  border-radius: 10px;
-  background-color: rgba(220, 0, 0, 1);
-  background-image: linear-gradient(
-    to top left,
-    rgba(0, 0, 0, 0.2),
-    rgba(0, 0, 0, 0.2) 30%,
-    rgba(0, 0, 0, 0)
-  );
-  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6),
-    inset -2px -2px 3px rgba(0, 0, 0, 0.6);
-}
-
-.edit-submit:hover {
-  background-color: rgba(255, 0, 0, 1);
-}
-
-.edit-submit:active {
-  box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6),
-    inset 2px 2px 3px rgba(0, 0, 0, 0.6);
 }
