--- a/public/style.css
+++ b/public/style.css
@@ -4,23 +4,6 @@
   border: 2px solid black;
 }
 
-
-
-/* .allPlayers {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 1fr);
-  grid-column-gap: 5px;
-  grid-row-gap: 5px;
-  border: 1px  solid red;
-} */
-
-
-/* .allPlayers{
-  display: flex;
-  flex-direction: column;
-  margin: 2rem;
-} */
 #image-track{
   display: flex;
   gap: 4vmin;
@@ -34,7 +17,7 @@
   cursor: pointer;
 }
 
-#image-track.active{
+#image-track:active{
   cursor: grabbing;
   cursor: -webkit-grabbing;
   transform: scale(1);
@@ -47,6 +30,10 @@
   width: 40vmin;
   text-align: center;
   margin: .5rem;
+}
+
+#playerCard:hover{
+  transform: scale(1.2);
 }
 
 
