--- a/client/features/teams/teamRow.css
+++ b/client/features/teams/teamRow.css
@@ -1,4 +1,4 @@
-.allPlayers {
+.teamRow {
   position: relative;
   width: 100%;
   overflow: hidden;
@@ -7,6 +7,7 @@
 .image-track-wrapper{
   width: 100%;
   height: 100%;
+  margin-bottom: 1rem;
   overflow-y: hidden;
   overflow-x: scroll;
   box-sizing: border-box;
